fix(main): resolve sonar lint issues